# saw-demos

./: .gitignore  .gitmodules  .travis.yml  README.md
.github/: ci.sh
.github/workflows/: ci.yml
common/: jvm.saw  llvm.saw
demos/java-bigint/: Add.java  BigInteger.cry  Makefile  add.saw
demos/salsa20/: Makefile  salsa20.saw
demos/signal-protocol/: Makefile  README.md  pyproject.toml
demos/signal-protocol/c/: dummy_signal_crypto_provider.c
demos/signal-protocol/cryptol/: HMAC.cry
demos/signal-protocol/python/: buffer_helpers.py  curve.py  load.py  main.py  protocol.py  saw_helpers.py  session_state.py  signal_protocol.py
demos/signal-protocol/saw/: buffer_helpers.saw  curve.saw  load.saw  main.saw  protocol.saw  saw_helpers.saw  signal_protocol.saw
demos/xxhash/: Makefile  xxhash32-ref.saw  xxhash64-ref.saw
templates/c/: Makefile  dotprod.c  dotprod.cry  dotprod.saw
